Added a new question

--- a/7. TCS.md
+++ b/7. TCS.md
@@ -25,3 +25,4 @@
 13. What is encapsulation in Java?
 14. Internal working of HashMap.
 15. What is Spring Boot actuator?
+16. What is the difference between authorization and authentication?
